fix spacing in tech

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -714,10 +714,6 @@ video {
   margin-top: 1rem;
 }
 
-.mt-40{
-  margin-top: 10rem;
-}
-
 .mt-5{
   margin-top: 1.25rem;
 }
@@ -1786,6 +1782,10 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:mt-40{
+    margin-top: 10rem;
+  }
+
   .md\:h-\[550px\]{
     height: 550px;
   }
